--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+HPL2/dependencies/
+HPL2/lib/
+amnesia/_temp/
+amnesia/redist/
+
 # User-specific files
 *.rsuser
 *.suo
