remove FBX support and update dependencies.zip!
the autodesk FBX SDK used by the game was clunky and old, and FBX isn't even used in the base game - if this is reimplemented in the future it would be best to use a more modern solution but I don't see any urgency to do so. this should make upgrading to a more modern version of Visual Studio easier!

--- a/HPL2/core/_HPL2_2010.vcxproj
+++ b/HPL2/core/_HPL2_2010.vcxproj
@@ -113,7 +113,7 @@
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Lib>
-      <AdditionalDependencies>SDL2.lib;DevIL.lib;glew32.lib;zlibwapi.lib;XInput.lib;User32.lib;Gdi32.lib;Shell32.lib;fbxsdk-2012.2-md.lib;Wininet.lib;dbghelp.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SDL2.lib;DevIL.lib;glew32.lib;zlibwapi.lib;User32.lib;Gdi32.lib;Shell32.lib;Wininet.lib;dbghelp.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>..\dependencies\lib\win32;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Lib>
     <PreLinkEvent>
@@ -145,7 +145,6 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="include\impl\GamepadSDL2.h" />
-    <ClInclude Include="include\impl\MeshLoaderFBX.h" />
     <ClInclude Include="include\gui\GuiPopUpUIKeyboard.h" />
     <ClInclude Include="include\input\ActionGamepadAxis.h" />
     <ClInclude Include="include\input\ActionGamepadButton.h" />
@@ -475,7 +474,6 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="sources\impl\GamepadSDL2.cpp" />
-    <ClCompile Include="sources\impl\MeshLoaderFBX.cpp" />
     <ClCompile Include="sources\gui\GuiPopUpUIKeyboard.cpp" />
     <ClCompile Include="sources\input\ActionGamepadAxis.cpp" />
     <ClCompile Include="sources\input\ActionGamepadButton.cpp" />
