--- a/HPL2/core/_HPL2_2010.vcxproj
+++ b/HPL2/core/_HPL2_2010.vcxproj
@@ -82,7 +82,7 @@
     <ClCompile>
       <Optimization>Disabled</Optimization>
       <AdditionalIncludeDirectories> .\include;  ..\dependencies\include; ..\dependencies\include\AL;  ..\dependencies\include\HaptX; ;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>WIN32;WINDOWS_IGNORE_PACKING_MISMATCH;_DEBUG;_WINDOWS;_USRDLL;HPL_EXPORTS;MEMORY_MANAGER_ACTIVE;USE_SDL2;USE_GAMEPAD;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;WINDOWS_IGNORE_PACKING_MISMATCH;_DEBUG;_WINDOWS;_USRDLL;HPL_EXPORTS;MEMORY_MANAGER_ACTIVE;USE_SDL2;USE_GAMEPAD;USE_VR;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <BasicRuntimeChecks>Default</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <PrecompiledHeader>
@@ -475,8 +475,12 @@
     <ClInclude Include="include\generate\GenerateTypes.h" />
     <ClInclude Include="include\generate\VoxelMap.h" />
     <ClInclude Include="include\HPL.h" />
+    <ClInclude Include="include\vr\LowLevelVirtualReality.h" />
+    <ClInclude Include="include\vr\VirtualReality.h" />
+    <ClInclude Include="include\impl\LowLevelVirtualRealityOpenVR.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="sources\impl\LowLevelVirtualRealityOpenVR.cpp" />
     <ClCompile Include="sources\impl\GamepadSDL2.cpp" />
     <ClCompile Include="sources\gui\GuiPopUpUIKeyboard.cpp" />
     <ClCompile Include="sources\input\ActionGamepadAxis.cpp" />
@@ -765,6 +769,7 @@
     <ClCompile Include="sources\generate\Generate.cpp" />
     <ClCompile Include="sources\generate\GenerateTypes.cpp" />
     <ClCompile Include="sources\generate\VoxelMap.cpp" />
+    <ClCompile Include="sources\impl\VirtualReality.cpp" />
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="buildcounterinput.txt">
